--- a/naqd_project/app1/static/css/registration.css
+++ b/naqd_project/app1/static/css/registration.css
@@ -5,21 +5,18 @@
 }
 body{
     width: 100%;
-    height: 100vh;
-    position: relative;
-    
-    
-    
+    height: 90vh;
+    display: flex; 
+    justify-content: center; 
+
 }
 .sign{
-    width: 65%;
+    width: 50%;
     height: 100%;
     margin: 30px;
     align-self: center;
     margin: auto;
     margin-top: 15px;
-
-   
 
 }
 .profile-pic{
@@ -27,10 +24,9 @@ body{
     height: 90px;
 }
 .add_customer{
-    width: 30%;
-    position: absolute;
-    top: 11%;
-    left: 55%;
+    width: 38%;
+    margin-top: 30px;
+    margin-right: 45px;
 }
 
 
