--- a/naqd_project/app1/templates/login.html
+++ b/naqd_project/app1/templates/login.html
@@ -29,7 +29,7 @@
 
 
 
-        <div class="container">
+        <div class="container sign">
             <div class="row justify-content-center" style="margin-top: 100px;">
                 <div class="col-md-6">
                     <div class="card">
@@ -37,7 +37,7 @@
                             <h4>Login</h4>
                         </div>
                         <div class="card-body">
-                            <form method="POST">
+                            <form action="login_view" method="POST">
                                 {% csrf_token %}
 
                                 <!-- Email Input -->
