--- a/naqd_project/app1/templates/login.html
+++ b/naqd_project/app1/templates/login.html
@@ -37,20 +37,20 @@
                             <h4>Login</h4>
                         </div>
                         <div class="card-body">
-                            <form method="POST">
+                            <form method="POST" action="main">
                                 {% csrf_token %}
 
                                 <!-- Email Input -->
                                 <div class="form-group">
                                     <label for="email">Email Address</label>
-                                    <input type="email" class="form-control" id="email" name="email" required
+                                    <input type="text" class="form-control" id="email" name="email" 
                                         placeholder="Enter your email">
                                 </div>
 
                                 <!-- Password Input -->
                                 <div class="form-group">
                                     <label for="password">Password</label>
-                                    <input type="password" class="form-control" id="password" name="password" required
+                                    <input type="password" class="form-control" id="password" name="password" 
                                         placeholder="Enter your password">
                                 </div>
 
