--- a/naqd_project/app1/templates/main.html
+++ b/naqd_project/app1/templates/main.html
@@ -155,6 +155,8 @@
 
 
     <script>
+
+        //View_customer_by_Fetch
         document.getElementById('customers-link').addEventListener('click', function () {
             fetch('/api/customers/')
                 .then(response => response.json())
@@ -172,12 +174,14 @@
                     });
                     content += '</tbody></table>';
                     document.getElementById('content').innerHTML = add_button + content;
+                    document.getElementById('head_title').textContent = 'Customer';
 
 
 
                 });
         });
 
+        //View_Debts_by_Fetch
         document.getElementById('debts-link').addEventListener('click', function () {
             fetch('/api/debts/')
                 .then(response => response.json())
@@ -215,6 +219,54 @@
                 });
         });
 
+        //View_Payments_by_Fetch
+        document.getElementById('payments-link').addEventListener('click', function () {
+            fetch('/api/payments/')
+                .then(response => response.json())
+                .then(data => {
+                    let content = '<table class="table table-striped">';
+                    content += '<thead><tr><th>ID</th><th>Payment Type</th><th>Payment Amount</th><th>Customer Name</th><th>Created At</th><th>Total Debt Amount</th><th>Remaining Debt</th><th>Actions</th></tr></thead><tbody>';
+                    
+                    data.forEach(payment => {
+                        
+                        add_buton = `<button type="button" class="btn btn-primary btn-lg active" data-bs-toggle="modal" data-bs-target="#paymentModal" data-id="${payment.id}"> Add Payment </button>`;
+                        content += `
+                            <tr>
+                                <td>${payment.id}</td>
+                                <td>${payment.payment_type}</td>
+                                <td>${payment.amount_payment}</td>
+                                <td>${payment.customer_name}</td>
+                                <td>${payment.created_at}</td>
+                                <td>${payment.total_debt}</td>
+                                <td>${payment.amount_remain}</td>
+
+                                
+                                
+
+                                
+                                <td>
+                                    <div class="actions">
+                                        <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                            data-bs-target="#editPaymentModal" data-id="${payment.id}">
+                                            Edit
+                                        </button>
+                                        
+                                        <form action="delete_item" method="post">
+                                            {% csrf_token %}
+                                            <input type="hidden" name="item_id" value="${payment.id}">
+                                            <button type="submit" class="btn btn-danger">Delete</button>
+                                        </form>
+                                    </div>
+                                </td>
+                                
+                            </tr>`;
+                    });
+                    content += '</tbody></table>'; 
+                    document.getElementById('content').innerHTML = add_buton + content; // إضافة الزر بعد تحميل الجدول
+                    document.getElementById('head_title').textContent = 'Payments';
+                });
+        });
+        
         document.addEventListener('DOMContentLoaded', function () {
             var customerModal = document.getElementById('customerModal');
             customerModal.addEventListener('show.bs.modal', function (event) {
