--- a/naqd_project/app1/templates/main.html
+++ b/naqd_project/app1/templates/main.html
@@ -116,7 +116,7 @@
     </div>
 
 
-
+{% comment %} Customer_list_Add_debt_modal {% endcomment %}
     <div class="modal fade" id="customerModal" tabindex="-1" aria-labelledby="customerModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -130,7 +130,7 @@
                         <input type="hidden" id="item_id_modal" name="debt.id" value="">
                         <div class="mb-3">
                             <label for="customerSelect" class="form-label"><strong>Choose a Customer</strong></label>
-                            <select class="form-select" id="customerSelect" name="customer_id">
+                            <select class="form-select" id="customerSelect_debt_modal" name="customer_id">
                                 <option value="" disabled selected>Select a customer</option>
                             </select><br>
                             <div class="mb-3">
@@ -153,6 +153,46 @@
         </div>
     </div>
 
+    <div class="modal fade" id="paymentModal" tabindex="-1" aria-labelledby="paymentModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="paymentModalLabel">Add Payment</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="addPaymentForm" method="post" action="#">
+                        {% csrf_token %}
+                        <div class="mb-3">
+                            <label for="customerSelect" class="form-label"><strong>Choose a Customer</strong></label>
+                            <select class="form-select" id="customerSelect" name="customer_id">
+                                <option value="" disabled selected>Select a customer</option>
+                            </select><br>
+                            <div class="mb-3">
+                                <label for="paymentAmount" class="form-label"><strong>Payment Amount:</strong> </label>
+                                <input type="text" class="form-control" id="paymentAmount" name="payment_amount">
+                            </div>
+                            <div class="mb-3">
+                                <label for="paymentType" class="form-label"><strong>Payment Type:</strong> </label>
+                                <select class="form-select" id="paymentType" name="payment_type">
+                                    <option value="" disabled selected>Select Payment Type</option>
+                                    <option value="Cash">Cash</option>
+                                    <option value="Cheque">Cheque</option>
+                                    <option value="Transfer">Transfer</option>
+                                </select>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" id="savePaymentButton">Save</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    
 
     <script>
 
@@ -267,22 +307,21 @@
                 });
         });
         
+        //Modal_customer_in_debt_page
         document.addEventListener('DOMContentLoaded', function () {
             var customerModal = document.getElementById('customerModal');
             customerModal.addEventListener('show.bs.modal', function (event) {
                 var button = event.relatedTarget;
                 var itemId = button.getAttribute('data-id');
                 document.getElementById('item_id_modal').value = itemId;
-
                 fetch(`/customers_view`)
                     .then(response => response.json())
                     .then(data => {
                         if (data.error) {
                             alert(data.error);
                         } else {
-                            var customerSelect = document.getElementById('customerSelect');
+                            var customerSelect = document.getElementById('customerSelect_debt_modal');
                             customerSelect.innerHTML = '';
-
                             data.forEach(customer => {
                                 var option = document.createElement('option');
                                 option.value = customer.id;
@@ -290,6 +329,7 @@
                                 customerSelect.appendChild(option);
                             });
                         }
+                        
                     })
                     .catch(error => {
                         console.error('Error fetching item data:', error);
@@ -298,42 +338,118 @@
             });
         });
 
+        document.addEventListener('DOMContentLoaded', function () {
+            var paymentModal = document.getElementById('paymentModal');
+            paymentModal.addEventListener('show.bs.modal', function (event) {
+                var button = event.relatedTarget;
+                var itemId = button.getAttribute('data-id');
+                document.getElementById('item_id_modal').value = itemId;
+        
+                // استعلام للحصول على العملاء من الخادم
+                fetch(`/customers_view`)
+                    .then(response => response.json())
+                    .then(data => {
+                        console.log('Data from server:', data); // تحقق من البيانات المستلمة
+                        if (data.error) {
+                            console.log('in Error');
+                            alert(data.error);
+                        } else {
+                            console.log('out Error');
+                            
+                                let customerSelect = document.getElementById('customerSelect');
+                                customerSelect.innerHTML = ''; 
+
+                                console.log('Before Updated Customer Select:', customerSelect);
+
+                                data.forEach(customer => {
+                                    console.log('Customer:', customer);
+                                    var option = document.createElement('option');
+                                    console.log('option: ',option);
+                                    option.value = customer.id;
+                                    option.textContent = `${customer.first_name} ${customer.second_name}`;
+                                    customerSelect.appendChild(option);
+
+                                    
+                                });
+        
+                                console.log('Updated Customer Select:', customerSelect);
+                        }
+                    })
+                    .catch(error => {
+                        console.error('Error fetching item data:', error);
+                        alert('Failed to fetch item data!');
+                    });
+            });
+        });
+        
+
 
         document.querySelector('#add_debts').addEventListener('click', function () {
-        
-        var selectedCustomer = document.getElementById('customerSelect').value;
-        var debt_amount = document.getElementById('debt_amount').value;
-        var debt_Description = document.getElementById('debt_description').value;
-        
-
-        fetch('/add_debts/', {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json',
-                'X-CSRFToken': document.querySelector('[name=csrfmiddlewaretoken]').value
-            },
-            body: JSON.stringify({
-                
-                customer_id : selectedCustomer,
-                debtamount: debt_amount,
-                debtDescription: debt_Description
+            var selectedCustomer = document.getElementById('customerSelect').value;
+            var debt_amount = document.getElementById('debt_amount').value;
+            var debt_Description = document.getElementById('debt_description').value;
+            fetch('/add_debts/', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                    'X-CSRFToken': document.querySelector('[name=csrfmiddlewaretoken]').value
+                },
+                body: JSON.stringify({
+                    
+                    customer_id : selectedCustomer,
+                    debtamount: debt_amount,
+                    debtDescription: debt_Description
+                })
             })
-        })
+                .then(response => response.json())
+                .then(data => {
+                    if (data.success) {
+                        alert('Debt was updated successfully!');
+                        location.reload(); // إعادة تحميل الصفحة بعد التحديث
+                    } else {
+                        alert('Failed to update item! ');
+                    }
+                })
+                .catch(error => {
+                    console.error('Error updating item:', error);
+                    alert('Failed to update item!');
+                });
+        });
+
+
+
+        document.querySelector('#savePaymentButton').addEventListener('click', function () {
+            var selectedCustomer = document.getElementById('customerSelect').value;
+            var paymentAmount = document.getElementById('paymentAmount').value;
+            var paymentType = document.getElementById('paymentType').value;
+            
+            fetch('/add_payment/', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                    'X-CSRFToken': document.querySelector('[name=csrfmiddlewaretoken]').value
+                },
+                body: JSON.stringify({
+                    customer_id: selectedCustomer,
+                    payment_amount: paymentAmount,
+                    payment_type: paymentType
+                })
+            })
             .then(response => response.json())
             .then(data => {
                 if (data.success) {
-                    alert('Debt was updated successfully!');
+                    alert('Payment was added successfully!');
                     location.reload(); // إعادة تحميل الصفحة بعد التحديث
                 } else {
-                    alert('Failed to update item! ');
+                    alert('Failed to add payment!');
                 }
             })
             .catch(error => {
-                console.error('Error updating item:', error);
-                alert('Failed to update item!');
+                console.error('Error adding payment:', error);
+                alert('Failed to add payment!');
             });
-    });
-
+        });
+        
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
