--- a/naqd_project/app1/static/css/registration.css
+++ b/naqd_project/app1/static/css/registration.css
@@ -5,28 +5,28 @@
 }
 body{
     width: 100%;
-    height: 90vh;
-    display: flex; 
-    justify-content: center; 
-
+    height: 100vh;
+    position: relative;
+    
+    
 }
 .sign{
-    width: 50%;
+    width: 65%;
     height: 100%;
     margin: 30px;
     align-self: center;
     margin: auto;
     margin-top: 15px;
-
 }
 .profile-pic{
     width: 90px;
     height: 90px;
 }
 .add_customer{
-    width: 38%;
-    margin-top: 30px;
-    margin-right: 45px;
+    width: 30%;
+    position: absolute;
+    top: 11%;
+    left: 55%;
 }
 
 
