--- a/naqd_project/app1/static/css/style.css
+++ b/naqd_project/app1/static/css/style.css
@@ -3,22 +3,60 @@
     margin: 0;
     box-sizing: border-box;
 }
-body{
+
+.main {
     width: 100%;
-    height: 90vh;
-}
-.logologin{
-    width: 30%;
-    height: 40%;
+    height: 670px;
+    background-color: #aeccc4;
 
-    
 }
 
-.logo{
+.login-page {
+    width: 100%;
+    height: 90%;
+    margin: auto;
+
+}
+
+.logologin {
+    width: 70%;
+    height: 100%;
+
+}
+
+.logo {
+    width: 50%;
+    height: 48%;
+    margin: auto;
     text-align: center;
 
 }
-.sign{
-    width: 60%;
-    height: 10%;
+
+.sign {
+    width: 50%;
+    height: 50%;
+    margin: auto;
+    
+
 }
+
+.account>a {
+    width: 100%;
+    align-self: center;
+    text-align: center;
+    
+}
+.sign-input {
+    opacity: 0.6;
+}
+
+.naqd-bar2>ul{
+    width: 100%;
+    height: 45px;
+    padding: 0px 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 3px double black;
+}
+
