--- a/naqd_project/app1/templates/login.html
+++ b/naqd_project/app1/templates/login.html
@@ -11,26 +11,33 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/"></a>
+<!-- Navbar -->
+<nav class="navbar navbar-expand-sm navbar-light  naqd-bar1">
+    <div class="container  naqd-bar2 ">
+        
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="navbar-brand" href="/">NaQd</a>
+                </li>
+                
+                <li class="nav-item">
+                    <a class="navbar-brand" href="about">About</a>
+                </li>
+                <li class="nav-item">
+                    <a href="register">Sign up</a>
+                </li>
+            </ul>
+        
+    </div>
+</nav>
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-    </nav>
-
-    <div class="container">
+<body class="main">
+    <div class="container login-page">
         <div class="logo">
             <img src="{% static 'img/logo.png' %}" alt="logo" class="logologin" />
         </div>
-
-
-
         <div class="container sign">
-            <div class="row justify-content-center" style="margin-top: 100px;">
+            <div class="row justify-content-center" style="margin-top: 20px;">
                 <div class="col-md-6">
                     <div class="card">
                         <div class="card-header text-center">
@@ -44,14 +51,14 @@
                                 <!-- Email Input -->
                                 <div class="form-group">
                                     <label for="email">Email Address</label>
-                                    <input type="text" class="form-control" id="email" name="email" 
+                                    <input type="text" class="form-control sign-input" id="email" name="email"
                                         placeholder="Enter your email">
                                 </div>
 
                                 <!-- Password Input -->
                                 <div class="form-group">
                                     <label for="password">Password</label>
-                                    <input type="password" class="form-control" id="password" name="password" 
+                                    <input type="password" class="form-control sign-input" id="password" name="password"
                                         placeholder="Enter your password">
                                 </div>
 
@@ -69,23 +76,23 @@
                     </div>
                 </div>
             </div>
-            <div class="mt-3">
-                <p>Don't have an account? <a href="register">Sign up here</a>.</p>
-            </div>
+
         </div>
+
+
     </div>
     </div>
-
-    <footer class="text-center mt-5">
-        <p>&copy; 2024 . © All rights reserved. By HFY Group</p>
-    </footer>
-
-
-    <!-- Bootstrap JS and dependencies -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.4.4/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
 </body>
+<footer class="text-center mt-5">
+    <p>&copy; 2024 . © All rights reserved. By HFY Group</p>
+</footer>
+
+
+<!-- Bootstrap JS and dependencies -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.4.4/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+
 
 </html>
