Feature/send_email_notifaction

--- a/naqd_project/app1/templates/login.html
+++ b/naqd_project/app1/templates/login.html
@@ -17,7 +17,7 @@
         
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="navbar-brand" href="/">NaQd</a>
+                    <a class="navbar-brand" href="/">Login Page</a>
                 </li>
                 
                 <li class="nav-item">
