--- a/naqd_project/app1/static/css/style.css
+++ b/naqd_project/app1/static/css/style.css
@@ -7,7 +7,7 @@
 .main {
     width: 100%;
     height: 670px;
-    background-color: #aeccc4;
+    background-color:whitesmoke;
 
 }
 
@@ -19,8 +19,9 @@
 }
 
 .logologin {
-    width: 70%;
+    width: 50%;
     height: 100%;
+    
 
 }
 
