fix sidebar all page

--- a/naqd_project/app1/templates/main.html
+++ b/naqd_project/app1/templates/main.html
@@ -78,7 +78,7 @@
       <div class="row">
         <div
           class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark"
-          style="width: 280px"
+          style="width: 280px; min-height: 100vh;"
         >
           <a
             href="/"
